--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1",
     "react-tooltip": "^4.2.6",
+    "react-transition-group": "^4.4.1",
     "styled-components": "^5.1.0"
   },
   "scripts": {
